--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
+        <meta name="google-site-verification" content="wVa4ox720ona3xk0WFFkarqGjIp8GlkMiVwmlcEvJYU" />
     <h2>Privacy Policy</h2> <p> drdshat group built the sahar ellil app as a Free app. This SERVICE is provided by
                     drdshat group at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
